--- a/_basic-components/time-series/gbdt-forecasting.ipynb
+++ b/_basic-components/time-series/gbdt-forecasting.ipynb
@@ -383,6 +383,7 @@
     "pal = [\"#eeef20\", \"#d4d700\", \"#80b918\", \"#2b9348\"]\n",
     "for i, alpha in enumerate(alphas):\n",
     "    ax.fill_between(df.index, forecasts_lower[i], forecasts_upper[i], alpha=0.5, fc=pal[i], ec='None', label=f'Forecast CI ({alpha})')\n",
+    "    \n",
     "ax.plot(df.index, df['signal'], color='r', alpha=0.2, label='Actuals')\n",
     "ax.plot(df.index, forecast_mean, color='k', alpha=0.5, label='Forecast mean')\n",
     "ax.axvline(x=df.index[int(len(df) * train_ratio)], linestyle='--')\n",
@@ -431,6 +432,7 @@
     "for i, alpha in enumerate(alphas):\n",
     "    rng = norm(loc=0.0, scale=y_dists.params['scale']).ppf(alpha) \n",
     "    ax.fill_between(df.index, y_preds + rng, y_preds - rng, alpha=0.5, fc=pal[i], ec='None', label=f'Forecast CI ({alpha})')\n",
+    "    \n",
     "ax.plot(df.index, df['signal'], color='r', alpha=0.2, label='Actuals')\n",
     "ax.plot(df.index, y_preds, color='k', alpha=0.5, label='Forecast mean')\n",
     "ax.axvline(x=df.index[int(len(df) * train_ratio)], linestyle='--')\n",
@@ -621,7 +623,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -635,7 +637,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
