--- a/_basic-components/time-series/var-part-1-forecasting-decomposition.ipynb
+++ b/_basic-components/time-series/var-part-1-forecasting-decomposition.ipynb
@@ -249,6 +249,7 @@
     "split_t = int(len(df_endog) * 0.8)\n",
     "idx_train, idx_test = df_endog.index[:split_t], df_endog.index[split_t:]\n",
     "x_endog_train, x_endog_test = df_endog[:split_t], df_endog[split_t:]\n",
+    "\n",
     "model_var = VAR(endog = x_endog_train, dates = idx_train, freq = 'D')\n",
     "model_var_fitted = model_var.fit(30, trend='c')\n",
     "\n",
@@ -290,7 +291,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -304,7 +305,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
