--- a/anomaly-detection/visual-quality-control.ipynb
+++ b/anomaly-detection/visual-quality-control.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "genetic-canal",
    "metadata": {},
    "source": [
     "# Visual Quality Control\n",
@@ -18,15 +17,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "id": "infectious-concentrate",
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "2.5.0\n"
+      "2.9.1\n"
      ]
     }
    ],
@@ -53,7 +51,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "traditional-miami",
    "metadata": {},
    "source": [
     "# Read and Visualize the Data\n",
@@ -64,7 +61,6 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "italian-laugh",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,7 +110,6 @@
   {
    "cell_type": "code",
    "execution_count": 207,
-   "id": "premium-surgery",
    "metadata": {},
    "outputs": [
     {
@@ -164,7 +159,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "assigned-shelter",
    "metadata": {},
    "source": [
     "# Create a Data Loader with Augmentation\n",
@@ -175,7 +169,6 @@
   {
    "cell_type": "code",
    "execution_count": 79,
-   "id": "operational-recycling",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +198,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "sixth-athletics",
    "metadata": {},
    "source": [
     "# Specify the Autoencoder Model \n",
@@ -216,7 +208,6 @@
   {
    "cell_type": "code",
    "execution_count": 21,
-   "id": "norwegian-providence",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,7 +339,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "combined-appreciation",
    "metadata": {},
    "source": [
     "# Train the Model"
@@ -357,7 +347,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "controlled-punishment",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,7 +373,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "tough-baghdad",
    "metadata": {},
    "source": [
     "# Score Anomalies\n",
@@ -395,7 +383,6 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "proved-difficulty",
    "metadata": {},
    "outputs": [
     {
@@ -481,9 +468,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py310",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py310"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -495,7 +482,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
