--- a/content-analytics/sentiment-analysis.ipynb
+++ b/content-analytics/sentiment-analysis.ipynb
@@ -2,10 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "eligible-vertical",
    "metadata": {},
    "source": [
-    "# Sentiment Analysis\n",
+    "# 감성 분석\n",
     "This notebook is a tutorial on sentiment analysis. We develop a model that predicts the sentiment of a movie review. The implementation is based on [1].\n",
     "\n",
     "## Data\n",
@@ -18,7 +17,6 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "quick-israel",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +38,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "fundamental-denial",
    "metadata": {},
    "source": [
     "# Sentiment Classification using Transformer\n",
@@ -51,7 +48,6 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "streaming-first",
    "metadata": {},
    "outputs": [
     {
@@ -176,7 +172,6 @@
   {
    "cell_type": "code",
    "execution_count": 27,
-   "id": "noted-johnson",
    "metadata": {},
    "outputs": [
     {
@@ -202,9 +197,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "py310",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "py310"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -216,7 +211,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.2"
+   "version": "3.8.5"
   }
  },
  "nbformat": 4,
